--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
         </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="js/three-cube.js"></script>
+    <script src="three-cube.js"></script>
 </body>
+
 </html>
